cmake_minimum_required(VERSION 3.10.0)
project(dungeon VERSION 0.1.0 LANGUAGES C CXX)
find_package(glm CONFIG REQUIRED)
set(SOURCE_FILE1 src/main.cpp)
set(SOURCE_FILE2 src/glad.c)
set(SOURCE_FILE3 src/generator.cpp)
set(SOURCE_FILE4 src/cell.cpp)
set(SOURCE_FILE5 src/room.cpp)
add_executable(dungeon ${SOURCE_FILE1} ${SOURCE_FILE2} ${SOURCE_FILE3} ${SOURCE_FILE4} ${SOURCE_FILE5})
target_include_directories(dungeon PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(dungeon PUBLIC ${PROJECT_SOURCE_DIR}/lib/libglfw3.a)
target_link_libraries(dungeon PRIVATE glm::glm-header-only)